tests/type-errors/002.zir
let expr = var x : () := true in () 

let comp main = read [int] >>> write [int]
